# android-wireless-pad

./: .gitmodules
WirelessPad/: .gitignore  build.gradle
WirelessPad/app/: build.gradle  proguard-rules.pro
WirelessPad/app/src/androidTest/java/jp/android/wirelesspad/: ApplicationTest.java
WirelessPad/app/src/main/: AndroidManifest.xml
WirelessPad/app/src/main/groovy/jp/android/wirelesspad/: MainActivity.groovy
WirelessPad/app/src/main/groovy/jp/android/wirelesspad/ui/: BluetoothSettingsActivity.groovy  FullscreenActivity.groovy  SettingsActivity.groovy  WiFiSettingsActivity.groovy
WirelessPad/app/src/main/java/jp/android/wirelesspad/: MainActivity.groovy  MainActivity.java
WirelessPad/app/src/main/java/jp/android/wirelesspad/client/: WirelessPadClient.java
WirelessPad/app/src/main/java/jp/android/wirelesspad/remote/mouse/: Command.java  Mouse.java  MouseFactory.java  NullMouse.java  TCPMouse.java  UDPMouse.java  WebSocketMouse.java
WirelessPad/app/src/main/java/jp/android/wirelesspad/ui/: MultiTouchGestureDetector.java
WirelessPad/app/src/main/java/jp/android/wirelesspad/ui/util/: SystemUiHider.java  SystemUiHiderBase.java  SystemUiHiderHoneycomb.java
WirelessPad/app/src/main/res/layout/: activity_bluetoothsettings.xml  activity_fullscreen.xml  activity_settings.xml  activity_wifisettings.xml
WirelessPad/app/src/main/res/menu/: menu_bluetoothsettings.xml  menu_settings.xml
WirelessPad/app/src/main/res/values/: strings.xml
wirelesspad-server/: CMakeLists.txt  build.bat  callback_windows.c  main.c
wirelesspad-server/src/: callback_mock.c  callback_windows.c  main.c
wpserver/: CMakeLists.txt  build.bat
wpserver/lib/: CMakeLists.txt
wpserver/lib/include/: logger.h  netutil.h  networks.h
wpserver/lib/src/: logger.c  mouse_win.c  netutil_win.c  networks_win.c
wpserver/tcp/: CMakeLists.txt
wpserver/tcp/src/: main.c
wpserver/udp/: CMakeLists.txt
wpserver/udp/src/: main.c
wpserver/ws/: CMakeLists.txt
wpserver/ws/src/: main.c
wpserver_lib/src/: mouse.h  mouse_mock.c  mouse_windows.c  networks.h  networks_win.c
wpserver_tcp/: CMakeLists.txt
wpserver_tcp/src/: main.c
wpserver_udp/: CMakeLists.txt
wpserver_udp/src/: main.c
wpserver_ws/: CMakeLists.txt  build.bat  build_mock.sh
